--- a/Project7/pyscript.toml
+++ b/Project7/pyscript.toml
@@ -1,3 +1,4 @@
-name = "Simple Panel"
-description = "A basic Panel application to be used with PyScript."
-packages=["panel"]
+packages = [
+    "https://cdn.holoviz.org/panel/1.3.8/dist/wheels/bokeh-3.3.3-py3-none-any.whl",
+    "https://cdn.holoviz.org/panel/1.3.8/dist/wheels/panel-1.3.8-py3-none-any.whl",
+]
